Fix a focus issue for zero state

Changes:
Hide the search results page when search box is closed and reshow it
when search box is opened, so the focus will not move onto the suggested
apps in search results page when zero state is enabled.

Bug: 880980
Change-Id: I6f32f0841fba094bc731bb0447f0f2cb055557b7
Reviewed-on: https://chromium-review.googlesource.com/1213926
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589604}
Former-commit-id: d0d1db1e101f31c4290f9cee03083c125493bcac